[package]
name = "ch32v203-fw"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"

[dependencies]
# ch32v2 = { path = "../src/ch32-rs-nightlies/ch32v2", features = [
#     "ch32v20x",
#     "critical-section",
# ] }
ch32v2 = { version = "0.1.5", features = [ "ch32v20x", "critical-section" ] }

# provide implementation for critical-section
riscv = { version = "0.10.0", features = ["critical-section-single-hart"] }
riscv-rt = "0.11.0"
panic-halt = "0.2.0"

embedded-hal = "1.0.0-alpha.9"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true